check dublicate category
